src/app/components/sections/as-email/as-email-form/styles/as-email-form.component.scss
:host {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.wrapper {
  width: 100%;
  height: 100%;
  font-size: 15px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 2%;

  button {
    width: 30%;
    padding: 2% 1%;
    background-color: white;
    aspect-ratio: 5/2;
  }

  form {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 1rem;

    label {
      display: flex;
      flex-direction: column;
      gap: .2rem;

      span {
        font-weight: bold;
      }

      input {

      }

      textarea {
        width: 100%;
        resize: vertical;
      }
    }

    button[type=submit] {
      align-self: flex-end;
    }
  }
}

